Updates to library

--- a/test.ipynb
+++ b/test.ipynb
@@ -41,11 +41,11 @@
    "source": [
     "df = pd.read_csv('vehicles_us.csv')\n",
     "df['manufacturer'] = df['model'].apply(lambda x: x.split()[0])\n",
-    "# create a text header above the dataframe\n",
+    "#text header above the dataframe\n",
     "st.header('Data viewer') \n",
     "# display the dataframe with streamlit\n",
     "st.dataframe(df)\n",
-    "st.header('Vehicle types by manufacturer')\n",
+    "st.header('Vehicle Types by Manufacturer')\n",
     "# create a plotly histogram figure\n",
     "fig = px.histogram(df, x='manufacturer', color='type')\n",
     "# display the figure with streamlit\n",
@@ -88,7 +88,7 @@
     }
    ],
    "source": [
-    "st.header('Compare price distribution between manufactures')\n",
+    "st.header('Compare Price Distribution Between Manufactures')\n",
     "#get a list of car manufacturers\n",
     "manufac_list = sorted(df['manufacturer'].unique())\n",
     "# get user's inputs from a dropdown menu\n",
